# Yavin

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  README.md  yavin  yavin-config.cmake  yavinConfig.cmake.in  yavinConfigVersion.cmake.in
Yavin/: AtomicCounterBuffer.cpp  AtomicCounterBuffer.h  Buffer.h  Camera.h  ComputeShader.cpp  ComputeShader.h  FragmentShader.cpp  FrameBuffer.cpp  GLSLVar.h  GeometryShader.h  IndexBuffer.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shader.cpp  Shader.h  ShaderStage.cpp  ShaderStage.h  ShaderStageParser.cpp  TesselationControlShader.h  TesselationEvaluationShader.cpp  TexHelper.h  Texture2D.cpp  Texture2D.h  Transform.h  Type.h  VBOHelpers.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  Window.cpp  Window.h  behaviour.h  collider.h  collision.h  compilation.h  config.mk.sample  (+8 more)
cmake/Modules/: FindGLFW3.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/yavin/: apis.h  atomic_counter_buffer.h  atomiccounterbuffer.h  attribute.h  buffer.h  camera.h  collision.h  computeshader.h  context.h  context.h.in  egl_context.h  egl_window.h  errorcheck.h  fragment_shader.h  fragmentshader.h  frame_buffer.h  framebuffer.h  geometry_shader.h  geometryshader.h  gl_functions.h  gl_type.h  glew.h  glfunctions.h  glfw_context.h  glfw_window.h  glincludes.h  gltype.h  glwrapper.h  glx_context.h  glx_window.h  id_holder.h  idholder.h  imgui.h  imgui_api_backend.h  imgui_includes.h  imgui_render_backend.h  imgui_shader.h  imguigl.h  include_tree.h  includetree.h  (+61 more)
include/yavin/X11/: display.h  window.h
include/yavin/egl/: context.h  display.h  environment.h  error_string.h  surface.h
shaders/: lighting_models.glsl  linked_list_element.glsl  linked_list_layouts.glsl  linked_list_render.frag  linked_list_render.vert  linked_list_write.glsl
single_include/: yavin  yavin.in
src/: atomic_counter_buffer.cpp  atomiccounterbuffer.cpp  attribute.cpp  compute_shader.cpp  computeshader.cpp  context.cpp  egl_context.cpp  egl_window.cpp  error_check.cpp  errorcheck.cpp  fragment_shader.cpp  fragmentshader.cpp  frame_buffer.cpp  framebuffer.cpp  geometry_shader.cpp  geometryshader.cpp  gl_functions.cpp  gl_verbose.cpp.in  gl_wrapper.cpp  glfunctions.cpp  glfw_context.cpp  glfw_window.cpp  glsl_var.cpp  glverbose.cpp.in  glwrapper.cpp  glx_context.cpp  glx_window.cpp  imgui.cpp  imgui_api_backend.cpp  imgui_render_backend.cpp  imgui_shader.cpp  imguigl.cpp  index_buffer.cpp  indexbuffer.cpp  mouse.cpp  mutex_handler.cpp  oitwindow.cpp  orthographic_camera.cpp  orthographiccamera.cpp  perspective_camera.cpp  (+18 more)
src/X11/: display.cpp  window.cpp
src/egl/: context.cpp  display.cpp  error_string.cpp  surface.cpp
test/: CMakeLists.txt  Makefile  TriangleStrip.h  atomiccounterbuffer.cpp  buffer_test.cpp  egl_context.cpp  framebuffer.cpp  glfwcontext.cpp  glx_window.cpp  glxcontext.cpp  indexbuffer.cpp  linked_list_render.frag  main.cpp  oit_test.cpp  oit_test.frag  shader_storage_buffer.cpp  shader_storage_test.frag  shader_storage_test.vert  test.cpp  texture1d.cpp  texture2d.cpp  texture3d.cpp  tuple.cpp  vbo_test.cpp  vertexbuffer.cpp  window.cpp  window_test.cpp
test/ignore/: egl_window.cpp  glx_window.cpp  oit_test.frag  regex_glsl.cpp  texture1d.cpp  texture2d.cpp
test/shaders/: passthrough.frag  passthrough.vert
yavin_include/: AtomicCounterBuffer.cpp  AtomicCounterBuffer.h  Buffer.h  Camera.h  ComputeShader.cpp  ComputeShader.h  FragmentShader.cpp  FragmentShader.h  FrameBuffer.cpp  FrameBuffer.h  GLSLVar.cpp  GLSLVar.h  GeometryShader.cpp  GeometryShader.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Movable.h  OITWindow.cpp  OITWindow.h  OrthographicCamera.h  PerspectiveCamera.h  PixelUnpackBuffer.h  Primitive.h  Shader.h  ShaderStage.cpp  ShaderStage.h  ShaderStageParser.cpp  ShaderStageParser.h  ShaderStorageBuffer.h  TesselationControlShader.cpp  TesselationControlShader.h  TesselationEvaluationShader.cpp  TesselationEvaluationShader.h  TexHelper.h  Texture.h  Texture2D.cpp  Texture2D.h  Transform.h  (+79 more)
